# gnd-gender

./: LICENSE  README.md  flake.nix  gnd_gender.py  pyproject.toml  requirements.txt
.github/workflows/: post.yml
gnd_gender/: main.py  phrases.json
